# study-tracker

./: Cargo.toml  README.md  study_tracker.db-shm  study_tracker.db-wal
migrations/: 01_init.sql
src/: main.rs
