[package]
name = "study_tracker"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Nareshix/study-tracker"

[dependencies]
chrono = "0.4.44"
directories = "6.0.0"
iced = "0.14.0"
iced-shadcn = "0.5.0"
lucide-icons = "1.16.0"
sqlitex = "0.4.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
